--- a/styles/reset.css
+++ b/styles/reset.css
@@ -56,10 +56,10 @@ textarea {
 html {
   box-sizing: border-box;
   font-size: 100%;
-  height: 100%;
+  height: calc(1vh * 100);
 }
 body {
-  height: 100%;
+  height: calc(1vh * 100);
   line-height: normal;
   margin: 0;
   scroll-behavior: smooth;
